# ZFFramework

./: .clang_complete  .gitignore  README.md  cleanup.sh
ZF/ZFAddition/zfscript/: zfautoscript_cleanup_ZFAddition.zfsh
ZF/ZFAddition/zfsrc/: ZFAddition.h
ZF/ZFAddition/zfsrc/ZFAddition/: ZFFileDescriptor_ZFBase64.cpp  ZFFileDescriptor_ZFBase64.h  ZFResCache_ZFJson.cpp  ZFResCache_ZFJson.h  ZFResCache_ZFXml.cpp  ZFResCache_ZFXml.h  ZFTimeLineCurve_ZFBezier.cpp  ZFTimeLineCurve_ZFBezier.h
ZF/ZFAlgorithm/zfsrc/: ZFAlgorithm.h
ZF/ZFAlgorithm/zfsrc/ZFAlgorithm/: ZFBase64.cpp  ZFBase64.h  ZFBezier.cpp  ZFBezier.h  ZFCrc32.cpp  ZFCrc32.h  ZFEncrypt.cpp  ZFEncrypt.h  ZFJson.cpp  ZFJson.h  ZFJsonSerializableConverter.cpp  ZFJsonSerializableConverter.h  ZFMd5.cpp  ZFMd5.h  ZFRegExp.cpp  ZFRegExp.h  ZFTextTemplate.cpp  ZFTextTemplate.h  ZFTextTemplateRun.cpp  ZFTextTemplateRun.h  ZFTextTemplateRunParamDefaultSetting.cpp  ZFTextTemplateType.cpp  ZFTextTemplateType.h  ZFXml.cpp  ZFXml.h  ZFXmlSerializableConverter.cpp  ZFXmlSerializableConverter.h
ZF/ZFAlgorithm_impl/zfproj/AndroidStudio/lib/: CMakeLists.txt
ZF/ZFCore/zfproj/AndroidStudio/zflib/: CMakeLists.txt
ZF/ZFCore/zfsrc/: ZFCore.h
ZF/ZFCore/zfsrc/ZFCore/: ZFArray.cpp  ZFArray.h  ZFAutoReleasePool.cpp  ZFAutoReleasePool.h  ZFCacheable.h  ZFContainer.cpp  ZFContainer.h  ZFCoreDef.h  ZFCoreStatistic_ZFTime.cpp  ZFCoreStatistic_ZFTime.h  ZFDebug.cpp  ZFDebug.h  ZFDebugLevel.cpp  ZFDebugLevel.h  ZFEnvInfo.cpp  ZFEnvInfo.h  ZFEvent.h  ZFFile.cpp  ZFFile.h  ZFFileBOM.cpp  ZFFileBOM.h  ZFFileCallback.cpp  ZFFileCallback.h  ZFFileCallback_ZFIOBridgeCallbackUsingTmpFile.cpp  ZFFileCallback_ZFIOBridgeCallbackUsingTmpFile.h  ZFFileDescriptor.cpp  ZFFileDescriptor.h  ZFFileDescriptor_common.cpp  ZFFileDescriptor_common.h  ZFFileUtil.cpp  ZFFileUtil.h  ZFGlobalEventCenter_common.cpp  ZFHashMap.cpp  ZFHashMap.h  ZFHashSet.cpp  ZFHashSet.h  ZFKeyValueContainer.cpp  ZFKeyValueContainer.h  ZFKeyValuePair.cpp  ZFKeyValuePair.h  (+44 more)
ZF/ZFLua/zfscript/: zfautoscript_cleanup_ZFLua.zfsh  zfautoscript_release_ZFLua.zfsh
ZF/ZFLua/zfsrc/: ZFLua.h
ZF/ZFLua/zfsrc/ZFLua/: ZFLuaDef.cpp  ZFLuaDef.h  ZFLuaExecute.cpp  ZFLuaExecute.h  ZFLuaGC.cpp  ZFLuaGC.h
ZF/ZFLua_impl/zf3rd/: zfautoscript_zf3rd_setup_ELuna.zfsh  zfautoscript_zf3rd_setup_LuaBridge.zfsh  zfautoscript_zf3rd_setup_lua.zfsh  zfautoscript_zf3rd_setup_lua_conf_template.h  zfautoscript_zf3rd_setup_lua_template.c  zfautoscript_zf3rd_setup_lua_template.h
ZF/ZFLua_impl/zfscript/: zfautoscript_cleanup_ZFLua_impl.zfsh  zfautoscript_release_ZFLua_impl.zfsh
ZF/ZFUIKit/zfsrc/: ZFUIKit.h
ZF/ZFUIKit/zfsrc/ZFUIKit/: ZFAnimationNativeView.cpp  ZFAnimationNativeView.h  ZFEnvInfo_ZFUIKit.cpp  ZFEnvInfo_ZFUIKit.h  ZFUIColor_common.cpp  ZFUIColor_common.h  ZFUIGlobalStyle.h  ZFUIImage.cpp  ZFUIImage.h  ZFUIImageCache.cpp  ZFUIImageCache.h  ZFUIImageCache_common.cpp  ZFUIImageCache_common.h  ZFUIImageIO.cpp  ZFUIImageIO.h  ZFUIImageRes.cpp  ZFUIImageRes.h  ZFUIImageView.cpp  ZFUIImageView.h  ZFUIKeyEvent.cpp  ZFUIKeyboardState.cpp  ZFUIKeyboardState.h  ZFUILayoutParam.cpp  ZFUILayoutParam.h  ZFUIMouseEvent.cpp  ZFUIMouseEvent.h  ZFUINativeViewWrapper.cpp  ZFUINativeViewWrapper.h  ZFUIOnScreenKeyboardState.cpp  ZFUIOnScreenKeyboardState.h  ZFUIRootView.cpp  ZFUIRootView.h  ZFUIScrollThumb.cpp  ZFUIScrollThumb.h  ZFUIScrollThumbDefault.cpp  ZFUIScrollThumbDefault.h  (+42 more)
ZF/ZFUIWebKit/zfproj/AndroidStudio/zflib/: CMakeLists.txt  build.gradle
ZF/ZF_loader_impl/zfscript/: zfautoscript_cleanup_ZF_loader_impl.zfsh
demo/zfproj/AndroidStudio/app/: CMakeLists.txt  build.gradle
demo/zfproj/AndroidStudio/zfapp/: CMakeLists.txt  build.gradle
demo/zfproj_with_src/AndroidStudio/app/: CMakeLists.txt  build.gradle
demo/zfsrc/: ZFFramework_test_global.cpp  ZFFramework_test_global.h  main.cpp  main_setting.cpp
demo_ZF2048/zfproj/AndroidStudio/zfapp/: CMakeLists.txt
demo_ZF2048/zfsrc/: ZF2048App.cpp  ZF2048App.h  ZF2048Game.cpp  ZF2048Game.h  main.cpp  main_setting.cpp
demo_ZF2048/zfsrc/ZF2048App/: ZF2048AppAutoMoveRunner.cpp  ZF2048AppAutoMoveRunner.h  ZF2048AppAutoMoveSettingDialog.cpp  ZF2048AppAutoMoveSettingDialog.h  ZF2048AppButton.h  ZF2048AppDialog.cpp  ZF2048AppDialog.h  ZF2048AppSettingDialog.cpp  ZF2048AppSettingDialog.h
demo_ZF2048/zfsrc/ZF2048Core/: ZF2048Core.cpp  ZF2048Core.h  ZF2048Types.cpp
demo_ZF2048/zfsrc/ZF2048UI/: ZF2048UIBlock.cpp  ZF2048UIBlock.h  ZF2048UIFrame.cpp  ZF2048UIFrame.h  ZF2048UISkin.cpp
master/: develop_note.md
master/ZF_docs/: doc_push.bat
master/ZF_docs/Doxygen/: Doxyfile
tools/: note.md
tools/common/: cleanup_Android.bat  cleanup_Android.sh  cleanup_Qt.sh  cleanup_Windows.sh  cleanup_proj.bat  cleanup_proj.sh  copy_check.bat  copy_check.sh  copy_header.bat  copy_header.sh  copy_lib.sh  copy_res.sh  file_exist.sh  file_merge.bat  file_merge.sh  git_check.bat  git_check.sh  install_lib.sh  run_if_exist.sh  run_recursive.sh  timestamp_check.sh  timestamp_save.sh  unity_build.sh  zfsh.bat  zfsh.sh  zfsh_if_exist.sh  zfsh_recursive.sh
tools/common/zfsh/: cp.sh  mkdir.sh  mv.bat  mv.sh  rm.bat  rm.sh
tools/release/: release_AndroidStudio.bat  release_AndroidStudio.sh  release_AndroidStudio_check.bat  release_AndroidStudio_check.sh
tools/spec/: AndroidStudio_release.bat  AndroidStudio_release.sh  Android_release.bat  Android_release.sh  Qt_MacOS_release.sh  Qt_Posix_release.sh  Qt_Windows_release.bat  iOS_aggregate.sh  iOS_release.sh
tools/spec/Android/: Android_release_impl.bat  Android_release_impl.sh  Android_release_lib.bat  Android_release_lib.sh  jar_build.sh  jar_copy.bat  jar_copy.sh  libs_build.bat  libs_build.sh  libs_copy.bat  libs_copy.sh  release.bat  release.sh  res_copy.sh  res_fix.bat  res_fix.sh
tools/spec/AndroidStudio/: libs_copy.bat  libs_copy.sh
tools/spec/iOS/: aggregate.sh  unique_proj.sh  unique_proj_recursive.sh
tools/util/: cleanup_proj.bat  cleanup_proj.sh  copy_header.sh  copy_res.bat  copy_res.sh
tools/util/cleanup_proj/: cleanup_Android.sh  cleanup_AndroidStudio.bat  cleanup_AndroidStudio.sh  cleanup_iOS.sh
(+724 files in other folders)
